Move Today's Hints parsing to its own file
Moved all the code that downloads and parses the Today's Hints page
to its own file for maintainability.

Also added error messages to the UI rather than just log them

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,11 @@
     font-family: "nyt-imperial"
 }
 
+.spelling-bee-helper-error {
+    color: red;
+    padding: 8px;
+}
+
 .table {
     text-align: center;
     text-transform: uppercase;
