--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,7 +71,7 @@ tr:last-child {
     font-size: 1rem;
 }
 
-.spelling-bee-helper-bee-photo {
+.spelling-bee-helper-bee-photo-thumbnail {
     object-fit: contain;
     max-width: 100%;
     padding-left: 3px;
@@ -84,4 +84,43 @@ tr:last-child {
     padding-left: 3px;
     padding-right: 3px;
     padding-bottom: 3px;
+}
+
+.spelling-bee-helper-bee-photo-credit-overlay {
+    font-size: 1.2rem;
+    color: white;
+    text-align: center;
+}
+
+.spelling-bee-helper-bee-photo-overlay {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.spelling-bee-helper-bee-photo-overlay-content {
+    margin: 0 auto;
+}
+
+.spelling-bee-helper-bee-photo-overlay-close {
+    font-size: 1.3rem;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 1rem;
+    text-align: right;
+}
+
+.spelling-bee-helper-bee-photo-overlay-close:hover {
+    color: #ccc;
+}
+
+.spelling-bee-helper-bee-photo-overlay-close:before {
+    content: "close ×";
 }
