Add auto start feature
Added the ability to skip the welcome screen and the congratulations
screen so you can get right to playing with minimal clicks

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,3 +186,11 @@ tr:last-child {
 .spelling-bee-helper-bee-photo-overlay-close:before {
     content: "close ×";
 }
+
+.sbh-skip-welcome {
+    padding-top: 12px;
+}
+
+.sbh-skip-welcome, .sbh-skip-congrats {
+    display: inline-block;
+}
